# open-webui-cli

./: .envrc  .gitignore  Cargo.toml  changelog.md  deny.toml  flake.nix  license.spdx  readme.md  taplo.toml
.config/: hakari.toml
.github/workflows/: prerelease.yaml
api/default/: Cargo.toml  README.md
api/default/.openapi-generator/: FILES
api/default/docs/: AddPipelineForm.md  DefaultApi.md  DeletePipelineForm.md  ModelFilterConfigForm.md  TaskConfigForm.md
api/default/src/apis/: configuration.rs  default_api.rs
api/default/src/models/: add_pipeline_form.rs  delete_pipeline_form.rs  http_validation_error.rs  mod.rs  model_filter_config_form.rs  task_config_form.rs  url_form.rs
api/ollama/: Cargo.toml  README.md
api/ollama/.openapi-generator/: FILES
api/ollama/docs/: ChatMessage.md  DefaultApi.md  GenerateChatCompletionForm.md  GenerateEmbedForm.md  Input.md  PushModelForm.md  UrlForm.md
api/ollama/src/apis/: configuration.rs  default_api.rs
api/ollama/src/models/: chat_message.rs  copy_model_form.rs  create_model_form.rs  generate_chat_completion_form.rs  generate_completion_form.rs  generate_embed_form.rs  generate_embeddings_form.rs  input.rs  keep_alive.rs  mod.rs  model_name_form.rs  ollama_config_form.rs  push_model_form.rs  url_update_form.rs  validation_error.rs
api/rag/: Cargo.toml  README.md
api/rag/.openapi-generator/: FILES
api/rag/docs/: ChunkParamUpdateForm.md  ConfigUpdateForm.md  DefaultApi.md  EmbeddingModelUpdateForm.md  FileConfig.md  OpenAiConfigForm.md  ProcessUrlForm.md  RerankingModelUpdateForm.md  SearchForm.md  WebConfig.md  YoutubeLoaderConfig.md
api/rag/src/apis/: configuration.rs  default_api.rs
api/rag/src/models/: chunk_param_update_form.rs  config_update_form.rs  content_extraction_config.rs  delete_form.rs  embedding_model_update_form.rs  file_config.rs  http_validation_error.rs  mod.rs  open_ai_config_form.rs  process_file_form.rs  process_text_form.rs  process_url_form.rs  query_collections_form.rs  query_doc_form.rs  (+6 more)
api/webui/: Cargo.toml  README.md
api/webui/.openapi-generator/: FILES
api/webui/docs/: AddMemoryForm.md  AddUserForm.md  AdminConfig.md  ApiKey.md  AuthsApi.md  BannerModel.md  Capabilities.md  Chat.md  ChatFolderIdForm.md  ChatForm.md  ChatIdTagForm.md  ChatIdTagModel.md  ChatImportForm.md  ChatResponse.md  ChatTitleIdResponse.md  ChatTitleMessagesForm.md  ChatsApi.md  CodeFormatRequest.md  Comment.md  ConfigsApi.md  ContentForm.md  DefaultApi.md  Description.md  EvaluationsApi.md  FeedbackForm.md  FeedbackFormData.md  FeedbackFormSnapshot.md  FeedbackModel.md  FeedbackUserResponse.md  FileMeta.md  FileMetadataResponse.md  FileModel.md  FileModelResponse.md  FilesApi.md  FolderForm.md  FolderIsExpandedForm.md  FolderModel.md  FolderParentIdForm.md  FoldersApi.md  FunctionForm.md  (+67 more)
cli/: Cargo.toml
cli/src/: chat.rs  cli.rs  delete.rs  info.rs  lib.rs  link.rs  list.rs  llm.rs  main.rs  new.rs  pull.rs  rag.rs  upload.rs
common/: Cargo.toml
hakari/: Cargo.toml
my-common/: Cargo.toml
my-workspace-hack/: Cargo.toml
openapi/0.3.32/ollama/: openapi.json
openapi/0.3.32/rag/: openapi.json
openapi/0.3.32/webui/: openapi.json
openapi/0.3.35/default/: openapi.json
openapi/0.3.35/ollama/: openapi.json
openapi/0.3.35/rag/: openapi.json
openapi/0.3.35/webui/: openapi.json
owui-ollama/: Cargo.toml  README.md
owui-ollama/docs/: CreateModelForm.md  GenerateCompletionForm.md  GenerateEmbedForm.md  GenerateEmbeddingsForm.md  KeepAlive.md  ModelNameForm.md  OllamaConfigForm.md  UrlUpdateForm.md
owui-ollama/src/apis/: configuration.rs  default_api.rs
owui-ollama/src/models/: create_model_form.rs  generate_chat_completion_form.rs  generate_embed_form.rs  keep_alive.rs  mod.rs  model_name_form.rs  push_model_form.rs  url_form.rs
owui-rag/: Cargo.toml  README.md
owui-rag/docs/: ContentExtractionConfig.md  DefaultApi.md  DeleteForm.md  OpenAiConfigForm.md  ProcessFileForm.md  ProcessTextForm.md  QueryCollectionsForm.md  QueryDocForm.md  QuerySettingsForm.md  WebSearchConfig.md
owui-rag/src/apis/: configuration.rs
owui-rag/src/models/: config_update_form.rs  content_extraction_config.rs  delete_form.rs  embedding_model_update_form.rs  process_text_form.rs  process_url_form.rs  reranking_model_update_form.rs  validation_error_loc_inner.rs  web_config.rs  youtube_loader_config.rs
owui_ollama/: Cargo.toml  README.md
owui_ollama/.openapi-generator/: FILES
owui_ollama/docs/: CopyModelForm.md
owui_ollama/src/apis/: default_api.rs
owui_ollama/src/models/: copy_model_form.rs  generate_completion_form.rs  generate_embeddings_form.rs  ollama_config_form.rs
owuicli/: Cargo.toml
owuicli/src/: main.rs
patches/: ollama-0.3.35.patch  webui-0.3.35.patch  webui.patch
patches/0.3.35/: default.patch  ollama.patch  webui.patch
(+115 files in other folders)
