[workspace]
resolver = "2"
members = ["owuicli", "my-common", "my-workspace-hack", "api/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "my-workspace"

[profile.dev]
opt-level = 0

# All this is great just slow af so turn on when needed.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
