[workspace]
resolver = "2"
members = ["cli", "hakari", "api/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "open-webui-cli"

[profile.dev]
opt-level = 0

# All this is great just slow af so turn on when needed or just for ci builds to
# abuse.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
