[package]
name = "common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
hakari = { version = "0.1", path = "../hakari" }
tokio = { version = "1", features = ["sync"] }

# Copypasta deps from the generated junk here
reqwest = { version = "^0.12", features = ["json", "multipart", "stream"] }
reqwest-middleware = { version = "^0.3", features = ["json", "multipart"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
